[package]
name = "key-manager"
version = "0.1.0"
authors = ["Tyler Lartonoix <lord.codemonkey@gmail.com>"]
edition = "2018"

[build]
target = ["x86_64-unknown-linux-musl", "x86_64-pc-windows-gnu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
openssh-keys = "0.5.0"
directories-next = "2.0.0"
